@@ -20,3 +20,4 @@ require 'active_merchant/billing/gateways/card_stream'
 require 'active_merchant/billing/gateways/psl_card'
 require 'active_merchant/billing/gateways/quickpay'
 require 'active_merchant/billing/gateways/realex'
+require 'active_merchant/billing/gateways/secure_pay'
