@@ -1,5 +1,7 @@
 # CHANGELOG
 # ---
+# * Add initial support for the SecurePay gateway using the Authorize.net translator [cody]
+#
 # * Add the homepage_url and display_name accessors to each gateway [cody]
 #
 # * Remove Money dependency from main gateways. Cleanup tests.  Add supported_countries class accessor which returns an array of 2 digit iso country codes for which countries the gateway supports accounts in [cody]
